# Projet-C

./: .buildconfig
CRUD/: a.out  bureaudevote.txt  fonction.c  fonction.h  main.c  makefile  prog  prog2  utilisateur.txt
Project-c-main raoudha/Build3/: Makefile  Makefile.in  config.status
Projet final /ProjetC solo compilé 1/: Makefile  config.status  projetc.glade.bak
Projet final /ProjetC solo compilé2/: Makefile  config.status  projetc.glade
copie/: Makefile  config.status  project.glade.bak  project.gladep.bak
projectSHOWHIDE/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projectshowhide.glade  projectshowhide.gladep.bak
projectSHOWHIDE/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  projectshowhide
raoudha project/: Makefile  Makefile.in  config.status  project.glade  test.glade.bak  test.gladep.bak
stat miniar/: bv.c  bv.h  bv.txt  main.c  prog
stat rim/: User.txt  main.c  prog  user.c  user.h
statistique youssef/: gestionreclamation.txt  listeelectorale.txt  main.c  prog  stat.c  stat.h
structure point/: main.c  main2.c  point.c  point.h  point.txt  prog
test/: main.c  prog
test jpeg/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  test-jpeg.glade.bak  test-jpeg.gladep
test projet c/: Makefile  config.status  project.glade
test projetc/: Makefile  config.status  help.c  projet.gladep  test.glade  test.glade.bak
test raoudha/: Makefile  config.status  register.txt
(+305 files in other folders)
